--- a/experiments/sunnycows/dnn_experiments.ipynb
+++ b/experiments/sunnycows/dnn_experiments.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/yn/16crnc792zg2yr78zf0qg0j40000gq/T/ipykernel_35645/914109045.py:4: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/yn/16crnc792zg2yr78zf0qg0j40000gq/T/ipykernel_3201/914109045.py:4: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  users = pd.read_csv('../../data/Users.csv', delimiter=';')\n"
      ]
     }
@@ -101,6 +101,30 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rated books (185973,) (271378, 6)\n",
+      "Books not rated: 121536\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Rated books\", ratings['ISBN'].unique().shape, books.shape)\n",
+    "\n",
+    "all_books_set = set(books['ISBN'])\n",
+    "rated_books_set = set(ratings['ISBN'])\n",
+    "unrated_books = list(all_books_set - rated_books_set)\n",
+    "\n",
+    "print(\"Books not rated:\", len(unrated_books))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +222,7 @@
        "4       E. J. W. Barber  1999   W. W. Norton & Company  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +300,7 @@
        "4       5   NaN"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +384,7 @@
        "7   276737  0600570967       6"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,34 +468,301 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  5%|▌         | 1/20 [00:05<01:37,  5.13s/it]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20, Loss: 52154.8046875\n",
-      "Epoch 2/20, Loss: 560947.0625\n",
-      "Epoch 3/20, Loss: 57070.15625\n",
-      "Epoch 4/20, Loss: 89733.3125\n",
-      "Epoch 5/20, Loss: 238248.34375\n",
-      "Epoch 6/20, Loss: 149470.359375\n",
-      "Epoch 7/20, Loss: 24795.333984375\n",
-      "Epoch 8/20, Loss: 12021.0283203125\n",
-      "Epoch 9/20, Loss: 66130.9765625\n",
-      "Epoch 10/20, Loss: 87542.15625\n",
-      "Epoch 11/20, Loss: 48508.58984375\n",
-      "Epoch 12/20, Loss: 6999.02099609375\n",
-      "Epoch 13/20, Loss: 7323.72021484375\n",
-      "Epoch 14/20, Loss: 29912.12890625\n",
-      "Epoch 15/20, Loss: 35077.30859375\n",
-      "Epoch 16/20, Loss: 18501.794921875\n",
-      "Epoch 17/20, Loss: 2527.4072265625\n",
-      "Epoch 18/20, Loss: 3296.23046875\n",
-      "Epoch 19/20, Loss: 14217.1328125\n",
-      "Epoch 20/20, Loss: 19128.796875\n",
-      "Test Loss: 13333.8740234375\n"
+      "rmse: 395.6460277005737 mse: tensor(156535.7969, grad_fn=<MseLossBackward0>) mae: 351.81363\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 10%|█         | 2/20 [00:09<01:19,  4.39s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse: 4464.954927115793 mse: tensor(19935820., grad_fn=<MseLossBackward0>) mae: 3937.56\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 15%|█▌        | 3/20 [00:12<01:10,  4.12s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse: 1519.3060907665676 mse: tensor(2308291., grad_fn=<MseLossBackward0>) mae: 1342.469\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 20%|██        | 4/20 [00:16<01:02,  3.92s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse: 771.4356964750682 mse: tensor(595113.0625, grad_fn=<MseLossBackward0>) mae: 679.8434\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 25%|██▌       | 5/20 [00:20<00:57,  3.85s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse: 1762.9278439439504 mse: tensor(3107915., grad_fn=<MseLossBackward0>) mae: 1559.5446\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 30%|███       | 6/20 [00:23<00:52,  3.76s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse: 1821.5645657932555 mse: tensor(3318098., grad_fn=<MseLossBackward0>) mae: 1614.746\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 35%|███▌      | 7/20 [00:27<00:48,  3.70s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse: 1446.8131983882897 mse: tensor(2093268.3750, grad_fn=<MseLossBackward0>) mae: 1290.4834\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 40%|████      | 8/20 [00:30<00:44,  3.68s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse: 924.7293370659585 mse: tensor(855124.2500, grad_fn=<MseLossBackward0>) mae: 833.47943\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 45%|████▌     | 9/20 [00:34<00:40,  3.68s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse: 371.9981137454492 mse: tensor(138382.5938, grad_fn=<MseLossBackward0>) mae: 344.978\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 50%|█████     | 10/20 [00:38<00:36,  3.68s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse: 180.15496852995105 mse: tensor(32455.8203, grad_fn=<MseLossBackward0>) mae: 155.0214\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 55%|█████▌    | 11/20 [00:41<00:33,  3.68s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse: 565.8189315725749 mse: tensor(320151.0625, grad_fn=<MseLossBackward0>) mae: 482.23376\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 60%|██████    | 12/20 [00:45<00:29,  3.66s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse: 757.8660517594686 mse: tensor(574361., grad_fn=<MseLossBackward0>) mae: 646.7525\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 65%|██████▌   | 13/20 [00:49<00:25,  3.65s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse: 799.0913775286764 mse: tensor(638546.9375, grad_fn=<MseLossBackward0>) mae: 684.2203\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 70%|███████   | 14/20 [00:52<00:21,  3.65s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse: 731.3244073197767 mse: tensor(534835.3750, grad_fn=<MseLossBackward0>) mae: 628.4637\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 75%|███████▌  | 15/20 [00:56<00:18,  3.65s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse: 583.2226948319509 mse: tensor(340148.6875, grad_fn=<MseLossBackward0>) mae: 503.73254\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 80%|████████  | 16/20 [01:00<00:14,  3.64s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse: 394.3238319317807 mse: tensor(155491.2969, grad_fn=<MseLossBackward0>) mae: 342.7856\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 85%|████████▌ | 17/20 [01:03<00:10,  3.63s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse: 187.76506054351262 mse: tensor(35255.7109, grad_fn=<MseLossBackward0>) mae: 165.70284\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 90%|█████████ | 18/20 [01:07<00:07,  3.63s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse: 24.73370111397996 mse: tensor(611.7560, grad_fn=<MseLossBackward0>) mae: 20.816355\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 95%|█████████▌| 19/20 [01:10<00:03,  3.62s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse: 193.13200962133325 mse: tensor(37299.9766, grad_fn=<MseLossBackward0>) mae: 161.59169\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 20/20 [01:14<00:00,  3.73s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rmse: 308.90418477978756 mse: tensor(95421.7891, grad_fn=<MseLossBackward0>) mae: 260.51196\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Loss: 134706.5625\n"
      ]
     }
    ],
@@ -479,6 +770,7 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from tqdm import tqdm\n",
     "\n",
     "# Split data\n",
     "train_data, test_data, train_ratings, test_ratings = train_test_split(\n",
@@ -536,8 +828,8 @@
     "num_user_features = user_features.shape[1]  # Age\n",
     "num_item_features = item_features.shape[1]  # Author_encoded, Year, and Publisher_encoded\n",
     "\n",
-    "embedding_dim = 50\n",
-    "hidden_dim = 128\n",
+    "embedding_dim = 100\n",
+    "hidden_dim = 512\n",
     "\n",
     "model = DNNRecommenderWithFeatures(num_users, num_items, num_user_features, num_item_features, embedding_dim, hidden_dim)\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
@@ -545,7 +837,7 @@
     "\n",
     "# Training loop\n",
     "num_epochs = 20\n",
-    "for epoch in range(num_epochs):\n",
+    "for epoch in tqdm(range(num_epochs)):\n",
     "    model.train()\n",
     "    optimizer.zero_grad()\n",
     "    \n",
@@ -555,7 +847,15 @@
     "    loss.backward()\n",
     "    optimizer.step()\n",
     "    \n",
-    "    print(f'Epoch {epoch+1}/{num_epochs}, Loss: {loss.item()}')\n",
+    "    # print(f'Epoch {epoch+1}/{num_epochs}, Loss: {loss.item()}')\n",
+    "    diff = (predictions-train_ratings_tensor).detach().numpy()\n",
+    "    rmse = (np.sum(diff**2)/len(train_data_tensor))**0.5\n",
+    "\n",
+    "    abs_diff = np.absolute(diff)\n",
+    "    mae = np.mean(abs_diff)\n",
+    "    # if epoch % 10 == 0:\n",
+    "    print(\"rmse:\", rmse, \"mse:\",loss, \"mae:\",mae)\n",
+    "\n",
     "\n",
     "# Evaluation\n",
     "model.eval()\n",
@@ -587,7 +887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
